Alter CSS for Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,29 @@ main > ul.contact {
 main > content p:first-child{
     margin-top: 50px;
 }
-
 main > content > p {
     margin-bottom: 10px;
     font-size: large;
     font-weight: 700;
+}
+@media only screen and (max-width: 768px) {
+    header > h1 {
+        font-size:xxx-large;
+    }
+    header > figure {
+        width: 400px;
+    }
+    header > figure > img {
+        border-radius: 200px;
+        width: 400px;
+    }
+    main > ul.contact {
+        flex-direction: column;
+    }
+    main > ul.contact > li > a > img {
+        width:100%;
+    }
+    main > content > p {
+        font-size: xx-large;
+    }
 }
